--- a/Assignment 001.ipynb
+++ b/Assignment 001.ipynb
@@ -6,15 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 01 ----------------------------------\n",
+    "# --------------------------- Start of Question No 01 ----------------------------------\n",
     "\n",
-    "# Assignment No 01:  Calculate Area of a Circle\n",
+    "# Question No 01:  Calculate Area of a Circle\n",
     "\n",
     "radius = float(input(\"Input Radius: \"))\n",
     "area = radius * radius * 22 / 7\n",
     "print(\"Area of Circle with radius\", radius, \"is\", area)\n",
     "\n",
-    "# --------------------------- End of Assignment No 01 ----------------------------------"
+    "# --------------------------- End of Question No 01 ----------------------------------"
    ]
   },
   {
@@ -23,9 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 02 ----------------------------------\n",
+    "# --------------------------- Start of Question No 02 ----------------------------------\n",
     "\n",
-    "# Assignment No 02:  Check Number either positive, negative or zero\n",
+    "# Question No 02:  Check Number either positive, negative or zero\n",
     "\n",
     "num = int(input(\"Enter Number: \"))\n",
     "\n",
@@ -36,7 +36,7 @@
     "else:\n",
     "    print(\"Zero Entered\")\n",
     "    \n",
-    "# --------------------------- End of Assignment No 02 ----------------------------------    \n"
+    "# --------------------------- End of Question No 02 ----------------------------------    \n"
    ]
   },
   {
@@ -45,9 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 03 ----------------------------------\n",
+    "# --------------------------- Start of Question No 03 ----------------------------------\n",
     "\n",
-    "# Assignment No 03:  Divisibility Check of two numbers\n",
+    "# Question No 03:  Divisibility Check of two numbers\n",
     "\n",
     "numerator = int(input(\"Enter Numerator: \"))\n",
     "denominator = int(input(\"Enter Denominator: \"))\n",
@@ -57,7 +57,7 @@
     "else:\n",
     "    print(\"Number\", numerator, \"is not Completely divisible by \", denominator)\n",
     "    \n",
-    "# --------------------------- End of Assignment No 03 ----------------------------------  "
+    "# --------------------------- End of Question No 03 ----------------------------------  "
    ]
   },
   {
@@ -66,9 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 04 (Method 1) ----------------------------------\n",
+    "# --------------------------- Start of Question No 04 (Method 1) ----------------------------------\n",
     "\n",
-    "# Assignment No 04:  Days Calculator\n",
+    "# Question No 04:  Days Calculator\n",
     "\n",
     "def isLeapYear (y):\n",
     "    if ((y/4) == int(y/4)):\n",
@@ -135,7 +135,7 @@
     "        \n",
     "print(\"There are\", total_days, \"days in between\", date_str_1, \"and\", date_str_2)     \n",
     "\n",
-    "# --------------------------- End of Assignment No 04 (Method 1) ----------------------------------  "
+    "# --------------------------- End of Question No 04 (Method 1) ----------------------------------  "
    ]
   },
   {
@@ -144,9 +144,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 04 (Method 2) ----------------------------------\n",
+    "# --------------------------- Start of Question No 04 (Method 2) ----------------------------------\n",
     "\n",
-    "# Assignment No 04:  Days Calculator\n",
+    "# Question No 04:  Days Calculator\n",
     "\n",
     "from datetime import date\n",
     "\n",
@@ -167,7 +167,7 @@
     "\n",
     "print(\"There are\", d.days, \"days in between\", date_str_1, \"and\", date_str_2)    \n",
     "\n",
-    "# --------------------------- End of Assignment No 04 (Method 2) ----------------------------------  "
+    "# --------------------------- End of Question No 04 (Method 2) ----------------------------------  "
    ]
   },
   {
@@ -176,16 +176,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 05 ----------------------------------\n",
+    "# --------------------------- Start of Question No 05 ----------------------------------\n",
     "\n",
-    "# Assignment No 05:  Calculate Volume of a sphere\n",
+    "# Question No 05:  Calculate Volume of a sphere\n",
     "\n",
     "radius = float(input(\"Enter Radius of Sphere: \"))\n",
     "vol = (4 * 22 * radius * radius * radius) / (3 * 7)\n",
     "\n",
     "print(\"Volume of the Sphere with Radius\", radius, \"is\", vol)\n",
     "\n",
-    "# --------------------------- End of Assignment No 05 ----------------------------------  "
+    "# --------------------------- End of Question No 05 ----------------------------------  "
    ]
   },
   {
@@ -194,9 +194,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 06 ----------------------------------\n",
+    "# --------------------------- Start of Question No 06 ----------------------------------\n",
     "\n",
-    "# Assignment No 06:  Copy string n times\n",
+    "# Question No 06:  Copy string n times\n",
     "\n",
     "ustr = input(\"Enter String: \")\n",
     "num = int(input(\"How many copies of String you need: \"))\n",
@@ -208,7 +208,7 @@
     "    \n",
     "print(num, \"Copies of\", ustr, \"are\", st)\n",
     "\n",
-    "# --------------------------- End of Assignment No 06 ----------------------------------   "
+    "# --------------------------- End of Question No 06 ----------------------------------   "
    ]
   },
   {
@@ -217,9 +217,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 07 ----------------------------------\n",
+    "# --------------------------- Start of Question No 07 ----------------------------------\n",
     "\n",
-    "# Assignment No 07:  Check if number is Even or Odd\n",
+    "# Question No 07:  Check if number is Even or Odd\n",
     "\n",
     "num = int(input(\"Enter Number: \"))\n",
     "\n",
@@ -229,7 +229,7 @@
     "    print(num, \"is Odd\")\n",
     "    \n",
     "\n",
-    "# --------------------------- End of Assignment No 07 ----------------------------------    "
+    "# --------------------------- End of Question No 07 ----------------------------------    "
    ]
   },
   {
@@ -238,9 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 08 ----------------------------------\n",
+    "# --------------------------- Start of Question No 08 ----------------------------------\n",
     "\n",
-    "# Assignment No 08:  Vowel Tester\n",
+    "# Question No 08:  Vowel Tester\n",
     "\n",
     "vowels = (\"A\", \"E\", \"I\", \"O\", \"U\")\n",
     "\n",
@@ -257,7 +257,7 @@
     "else:\n",
     "    print(\"Letter\", st, \"is not Vowel\")\n",
     "\n",
-    "# --------------------------- End of Assignment No 08 ----------------------------------  "
+    "# --------------------------- End of Question No 08 ----------------------------------  "
    ]
   },
   {
@@ -266,9 +266,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 09 ----------------------------------\n",
+    "# --------------------------- Start of Question No 09 ----------------------------------\n",
     "\n",
-    "# Assignment No 09:  Triangle area\n",
+    "# Question No 09:  Triangle area\n",
     "\n",
     "base = float(input(\"Enter magnitude of Triangle base: \"))\n",
     "height = float(input(\"Enter Magnitude of Triangle Height: \"))\n",
@@ -277,7 +277,7 @@
     "\n",
     "print(\"Area of a Triangle with Height\", height, \"and Base\", base, \"is\", area)\n",
     "\n",
-    "# --------------------------- End of Assignment No 09 ---------------------------------- "
+    "# --------------------------- End of Question No 09 ---------------------------------- "
    ]
   },
   {
@@ -286,9 +286,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 10 ----------------------------------\n",
+    "# --------------------------- Start of Question No 10 ----------------------------------\n",
     "\n",
-    "# Assignment No 10:  Calculate Interest\n",
+    "# Question No 10:  Calculate Interest\n",
     "\n",
     "p = float(input(\"Please enter principal amount: \"))\n",
     "rate = float(input(\"Please Enter Rate of interest in %: \"))\n",
@@ -303,7 +303,7 @@
     "\n",
     "print(\"After\", years, \"years, your principal amount\", p, \"over an interest rate of\", rate, \"% will be\", p + interest)\n",
     "\n",
-    "# --------------------------- End of Assignment No 10 ----------------------------------  "
+    "# --------------------------- End of Question No 10 ----------------------------------  "
    ]
   },
   {
@@ -312,9 +312,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 11 ----------------------------------\n",
+    "# --------------------------- Start of Question No 11 ----------------------------------\n",
     "\n",
-    "# Assignment No 11:  Euclidean distance\n",
+    "# Question No 11:  Euclidean distance\n",
     "\n",
     "import math\n",
     "\n",
@@ -327,7 +327,7 @@
     "\n",
     "print(\"Distance between points (\", x1, \",\", y1, \") and (\", x2, \",\", y2, \") is\", d)\n",
     "\n",
-    "# --------------------------- End of Assignment No 11 ----------------------------------   "
+    "# --------------------------- End of Question No 11 ----------------------------------   "
    ]
   },
   {
@@ -336,9 +336,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 12 ----------------------------------\n",
+    "# --------------------------- Start of Question No 12 ----------------------------------\n",
     "\n",
-    "# Assignment No 12:  Feet to Centimeter Converter\n",
+    "# Question No 12:  Feet to Centimeter Converter\n",
     "\n",
     "h = float(input(\"Enter Height in Feet: \"))\n",
     "\n",
@@ -346,7 +346,7 @@
     "\n",
     "print(\"There are\", cm, \"Cm in\", h, \"ft\")\n",
     "\n",
-    "# --------------------------- End of Assignment No 12 ----------------------------------    "
+    "# --------------------------- End of Question No 12 ----------------------------------    "
    ]
   },
   {
@@ -355,9 +355,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 13 ----------------------------------\n",
+    "# --------------------------- Start of Question No 13 ----------------------------------\n",
     "\n",
-    "# Assignment No 13:  BMI Calculator\n",
+    "# Question No 13:  BMI Calculator\n",
     "\n",
     "import math\n",
     "\n",
@@ -371,7 +371,7 @@
     "\n",
     "print(\"Your BMI is\", bmi)\n",
     "\n",
-    "# --------------------------- End of Assignment No 13 ----------------------------------    "
+    "# --------------------------- End of Question No 13 ----------------------------------    "
    ]
   },
   {
@@ -380,9 +380,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 14 ----------------------------------\n",
+    "# --------------------------- Start of Question No 14 ----------------------------------\n",
     "\n",
-    "# Assignment No 14:  Sum of n Positive Integers\n",
+    "# Question No 14:  Sum of n Positive Integers\n",
     "\n",
     "num = int(input(\"Enter value of n: \"))\n",
     "\n",
@@ -393,7 +393,7 @@
     "    \n",
     "print(\"Sum of n Positive integers till\", num, \"is\", total)\n",
     "\n",
-    "# --------------------------- End of Assignment No 14 ----------------------------------    "
+    "# --------------------------- End of Question No 14 ----------------------------------    "
    ]
   },
   {
@@ -402,9 +402,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 15 ----------------------------------\n",
+    "# --------------------------- Start of Question No 15 ----------------------------------\n",
     "\n",
-    "# Assignment No 15:  Digits Sum of a Number\n",
+    "# Question No 15:  Digits Sum of a Number\n",
     "\n",
     "n = str(input(\"Enter a number: \"))\n",
     "\n",
@@ -421,7 +421,7 @@
     "        \n",
     "print(\"Sum of\", st, \"is\", total)\n",
     "\n",
-    "# --------------------------- End of Assignment No 15 ----------------------------------    "
+    "# --------------------------- End of Question No 15 ----------------------------------    "
    ]
   },
   {
@@ -430,9 +430,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 16 ----------------------------------\n",
+    "# --------------------------- Start of Question No 16 ----------------------------------\n",
     "\n",
-    "# Assignment No 16:  Decimal to Binary Converter\n",
+    "# Question No 16:  Decimal to Binary Converter\n",
     "\n",
     "num = int(input(\"Enter a decimal number: \"))\n",
     "\n",
@@ -455,7 +455,7 @@
     "\n",
     "print(\"Binary Representation of\", num, \"is\", binary)\n",
     "\n",
-    "# --------------------------- End of Assignment No 16 ----------------------------------    "
+    "# --------------------------- End of Question No 16 ----------------------------------    "
    ]
   },
   {
@@ -464,9 +464,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 17 ----------------------------------\n",
+    "# --------------------------- Start of Question No 17 ----------------------------------\n",
     "\n",
-    "# Assignment No 17:  Binary to Decimal Converter\n",
+    "# Question No 17:  Binary to Decimal Converter\n",
     "\n",
     "num = int(input(\"Enter a Binary number: \"))\n",
     "\n",
@@ -482,7 +482,7 @@
     "    \n",
     "print(\"Decimal Representation of\", num, \"is\", int(dec))\n",
     "\n",
-    "# --------------------------- End of Assignment No 17 ----------------------------------    \n"
+    "# --------------------------- End of Question No 17 ----------------------------------    \n"
    ]
   },
   {
@@ -491,9 +491,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 18 ----------------------------------\n",
+    "# --------------------------- Start of Question No 18 ----------------------------------\n",
     "\n",
-    "# Assignment No 18:  Vowel and Consonants Counter\n",
+    "# Question No 18:  Vowel and Consonants Counter\n",
     "\n",
     "#------- function to check if a single character is a vowel or not ---------\n",
     "def is_vowel(chr, arr):\n",
@@ -521,7 +521,7 @@
     "print(\"Consonants:\", total_consonants)\n",
     "\n",
     "\n",
-    "# --------------------------- End of Assignment No 18 ----------------------------------  "
+    "# --------------------------- End of Question No 18 ----------------------------------  "
    ]
   },
   {
@@ -530,9 +530,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 19 ----------------------------------\n",
+    "# --------------------------- Start of Question No 19 ----------------------------------\n",
     "\n",
-    "# Assignment No 19:  Palindrome tester\n",
+    "# Question No 19:  Palindrome tester\n",
     "\n",
     "str1 = str(input(\"Enter text: \"))\n",
     "str2 = ''\n",
@@ -546,7 +546,7 @@
     "else:           \n",
     "    print(\"Text\", str1, \"is not a Palindrome\")\n",
     "    \n",
-    "# --------------------------- End of Assignment No 19 ----------------------------------"
+    "# --------------------------- End of Question No 19 ----------------------------------"
    ]
   },
   {
@@ -555,9 +555,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 20 ----------------------------------\n",
+    "# --------------------------- Start of Question No 20 ----------------------------------\n",
     "\n",
-    "# Assignment No 20:  Count Alphabets, Numbers and Special Characters\n",
+    "# Question No 20:  Count Alphabets, Numbers and Special Characters\n",
     "\n",
     "#------- function to check if a single character is an Alphabet or not ---------\n",
     "def isAlphabet(chr, arr):\n",
@@ -594,7 +594,7 @@
     "print(\"Special Characters =\", specials)        \n",
     "print(\"Spaces =\", spaces)      \n",
     "\n",
-    "# --------------------------- End of Assignment No 20 ----------------------------------    "
+    "# --------------------------- End of Question No 20 ----------------------------------    "
    ]
   },
   {
@@ -603,9 +603,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 21 ----------------------------------\n",
+    "# --------------------------- Start of Question No 21 ----------------------------------\n",
     "\n",
-    "# Assignment No 21:  Write a Python program to construct the following pattern\n",
+    "# Question No 21:  Write a Python program to construct the following pattern\n",
     "\n",
     "char = \"*\"\n",
     "counter = 1\n",
@@ -626,7 +626,7 @@
     "    counter += diff\n",
     "    \n",
     "\n",
-    "# --------------------------- End of Assignment No 21 ----------------------------------   "
+    "# --------------------------- End of Question No 21 ----------------------------------   "
    ]
   },
   {
@@ -635,9 +635,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 22 ----------------------------------\n",
+    "# --------------------------- Start of Question No 22 ----------------------------------\n",
     "\n",
-    "# Assignment No 22:  Write a Python program to construct the following pattern\n",
+    "# Question No 22:  Write a Python program to construct the following pattern\n",
     "\n",
     "counter = 1\n",
     "diff = 1\n",
@@ -656,7 +656,7 @@
     "    \n",
     "    counter += diff\n",
     "\n",
-    "# --------------------------- End of Assignment No 22 ----------------------------------   "
+    "# --------------------------- End of Question No 22 ----------------------------------   "
    ]
   },
   {
@@ -665,9 +665,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------- Start of Assignment No 23 ----------------------------------\n",
+    "# --------------------------- Start of Question No 23 ----------------------------------\n",
     "\n",
-    "# Assignment No 23:  Write a Python program to construct the following pattern\n",
+    "# Question No 23:  Write a Python program to construct the following pattern\n",
     "\n",
     "counter = 1\n",
     "diff = 1\n",
@@ -683,7 +683,7 @@
     "    \n",
     "    counter += diff\n",
     "    \n",
-    "# --------------------------- End of Assignment No 23 ----------------------------------    "
+    "# --------------------------- End of Question No 23 ----------------------------------    "
    ]
   }
  ],
